--- a/snow.html
+++ b/snow.html
@@ -1,41 +1,70 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <title>Snow Effect</title>
+  <title>夢幻雪花動畫</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
-      background: transparent;
+      height: 100vh;
+      background: linear-gradient(to bottom, #001f3f, #0074D9);
       overflow: hidden;
     }
-    img.snowflake {
+
+    .snowflake {
       position: absolute;
+      top: -50px;
       pointer-events: none;
       z-index: 9999;
+      animation-name: drift;
+      animation-timing-function: ease-in-out;
+    }
+
+    @keyframes drift {
+      0% { transform: translateX(0); }
+      50% { transform: translateX(30px); }
+      100% { transform: translateX(-30px); }
     }
   </style>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-  <script>
-    setInterval(function () {
-      const img = $("<img class='snowflake' src='https://i.imgur.com/5KXg9Yz.png'>"); // ✅ 替換為你的雪花圖片
-      $("body").append(img);
 
-      const size = Math.floor(Math.random() * 21) + 20; // 20–40px
-      img.css("width", size + "px");
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  const snowflakeImages = [
+    "https://i.imgur.com/8zQw1gW.png",
+    "https://i.imgur.com/1XxkYzT.png",
+    "https://i.imgur.com/0k3ZQZr.png"
+  ];
 
-      const w = $(window).width();
-      const left = Math.floor(Math.random() * (w - size));
-      img.css("left", left + "px");
+  function createSnowflake() {
+    const imgSrc = snowflakeImages[Math.floor(Math.random() * snowflakeImages.length)];
+    const size = Math.random() * 30 + 20; // 20px ~ 50px
+    const opacity = Math.random() * 0.5 + 0.5;
+    const duration = Math.random() * 5 + 5; // 5s ~ 10s
+    const left = Math.random() * window.innerWidth;
 
-      const top = $(window).height() - size;
-      img.animate({ top: top + "px", opacity: 0.7 }, size * 100, function () {
-        img.remove();
-      });
-    }, 100);
-  </script>
+    const $flake = $("<img class='snowflake'>").attr("src", imgSrc).css({
+      left: left + "px",
+      width: size + "px",
+      opacity: opacity,
+      animationDuration: (Math.random() * 3 + 2) + "s"
+    });
+
+    $("body").append($flake);
+
+    $flake.animate(
+      { top: "100%" },
+      duration * 1000,
+      "linear",
+      function () {
+        $(this).remove();
+      }
+    );
+  }
+
+  setInterval(createSnowflake, 300);
+</script>
+
 </body>
 </html>
